--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpickle==3.0.0
 comm==0.2.1
 contourpy==1.2.0
 cramjam==2.7.0
@@ -25,6 +26,7 @@ cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
 exceptiongroup==1.2.0
@@ -48,6 +50,7 @@ isoduration==20.11.0
 isort==5.13.2
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.6.1
 joblib==1.4.2
 json5==0.9.6
 jsonpointer==3.0.0
@@ -64,6 +67,7 @@ jupyterlab_code_formatter==3.0.2
 jupyterlab-pygments==0.1.2
 jupyterlab_server==2.27.3
 kiwisolver==1.4.4
+llvmlite==0.43.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.9.2
@@ -79,8 +83,10 @@ nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook_shim==0.2.3
+numba==0.60.0
 numexpr==2.8.7
 numpy==1.26.4
+openai==1.52.1
 overrides==7.4.0
 packaging==24.1
 pandas==2.2.2
@@ -122,8 +128,10 @@ scipy==1.12.0
 seaborn==0.13.2
 Send2Trash==1.8.2
 setuptools==75.1.0
+shap==0.46.0
 shellingham==1.5.4
 six==1.16.0
+slicer==0.0.8
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.2.0
@@ -135,6 +143,7 @@ threadpoolctl==2.2.0
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.4.1
+tqdm==4.66.5
 traitlets==5.14.3
 typer==0.12.5
 types-python-dateutil==2.9.0.20241003
