--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,7 @@ pip==24.2
 platformdirs==3.10.0
 plotly==5.24.1
 prometheus-client==0.14.1
+prometheus-fastapi-instrumentator==7.0.0
 prompt-toolkit==3.0.43
 psutil==5.9.0
 ptyprocess==0.7.0
